# metabolism

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  StoichiometricMatrix.csv  clean_all.sh  env.sh  feasible_point_pyomo_relaxed.cc  feasible_point_relaxed.cc  hello  hello.cpp  main.cc  maximum_entropy_pyomo_relaxed.py  maximum_entropy_relaxed.cc  metabolism.py  metabolism_driver.py  notes.txt  scratch  setup_prereqs.sh  spack.yaml
.spack-env/: view
.spack-env/._view/ul5rjkaarfoutzg4q5bzafnddinhtgmg/include/: cblas.h  cmumps_c.h  cmumps_root.h  cmumps_struc.h  dmumps_c.h  dmumps_root.h  dmumps_struc.h  elapse.h  f77blas.h  lapack.h  lapacke.h  lapacke_config.h  lapacke_mangling.h  lapacke_utils.h  mpi.h  mpif.h  mumps_c_types.h  mumps_compat.h  mumps_int_def.h  openblas_config.h  smumps_c.h  smumps_root.h  smumps_struc.h  zmumps_c.h  zmumps_root.h  zmumps_struc.h
.spack-env/._view/ul5rjkaarfoutzg4q5bzafnddinhtgmg/lib/: README  libipopt.so.1  (+2 more)
bash_scripts/: build_metabolism.sh  clean_all.sh  env.sh  setup_prereqs.sh
data/: DartConfiguration.tcl  EquilibriumConstants.csv  StoichiometricMatrix.csv  concentrations.csv
data/cpp_out/: beta.csv  fluxes.csv  h_vars.csv  steady_state.csv  u_vars.csv  variable_metabolites.csv
data/python_feasible_point/: flux_variables.csv  null_space_matrix.csv  null_space_variables.csv  variable_metabolites_log_counts.csv
include/: classes_maximum_entropy.hh  find_initial_values.hh  ifopt_constraint_class.hh  ifopt_constraint_classes.hh  ifopt_cost_class.hh  ifopt_variable_class.hh  includes_and_types.hh  maximum_entropy_relaxed.hh  metabolism.hh  read_data_files.hh  run_maximum_entropy.hh  write_vector_to_csv.hh
lib64/ifopt/: ifopt_ipopt-example
python/: feasible_point_pyomo_relaxed.py  maximum_entropy_pyomo_relaxed.py  metabolism.py  metabolism_driver.py  reilly_test.py
python/anaconda/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  ampl-mp-3.1.0-h2cc385e_1006.json  blas-1.0-mkl.json  bzip2-1.0.8-h7b6447c_0.json  ca-certificates-2022.4.26-h06a4308_0.json  ca-certificates-2022.5.18.1-ha878542_0.json  certifi-2022.5.18.1-py310h06a4308_0.json  certifi-2022.5.18.1-py310hff52083_0.json  history  intel-openmp-2021.4.0-h06a4308_3561.json  ipopt-3.14.6-h630875f_0.json  ld_impl_linux-64-2.38-h1181459_1.json  libblas-3.9.0-12_linux64_mkl.json  libcblas-3.9.0-12_linux64_mkl.json  libedit-3.1.20191231-he28a2e2_2.json  libffi-3.3-he6710b0_2.json  libgcc-ng-11.2.0-h1234567_0.json  libgfortran-ng-12.1.0-h69a702a_16.json  libgfortran5-12.1.0-hdcd56e2_16.json  libgomp-11.2.0-h1234567_0.json  libiconv-1.16-h516909a_0.json  liblapack-3.9.0-12_linux64_mkl.json  libstdcxx-ng-11.2.0-h1234567_0.json  libuuid-1.0.3-h7f8727e_2.json  metis-5.1.0-h58526e2_1006.json  mkl-2021.4.0-h06a4308_640.json  mkl-service-2.4.0-py310h7f8727e_0.json  mkl_fft-1.3.1-py310hd6ae3a3_0.json  mkl_random-1.2.2-py310h00e6091_0.json  mumps-include-5.2.1-ha770c72_11.json  mumps-seq-5.2.1-h2104b81_11.json  ncurses-6.3-h7f8727e_2.json  nose-1.3.7-pyhd3eb1b0_1008.json  numpy-1.22.3-py310hfa59a62_0.json  numpy-base-1.22.3-py310h9585f30_0.json  openssl-1.1.1o-h166bdaf_0.json  openssl-1.1.1o-h7f8727e_0.json  pip-21.2.4-py310h06a4308_0.json  ply-3.11-py_1.json  (+16 more)
python/anaconda/include/: scotch.h
python/anaconda/lib/: libasl.so.3.1.0  libatomic.so.1.2.0  libcrypto.so.1.1  libgcc_s.so.1  libgomp.so.1.0.0  libipopt.so.3.14.6  libipoptamplinterface.so.3.14.6  libitm.so.1.0.0  liblsan.so.0.0.0  libmp.so.3.1.0  libodbc.so.2.0.0  libodbccr.so.2.0.0  libodbcinst.so.2.0.0  libquadmath.so.0.0.0  libsipopt.so.3.14.6  libtinfow.so.6.3  libubsan.so.1.0.0  tclConfig.sh  tkConfig.sh
scratch/: Makefile  old_ifopt_constraint_class.cc  test_metabolism.cc
share/ifopt/cmake/: ifopt-config-version.cmake  ifopt_core-targets-noconfig.cmake  ifopt_core-targets.cmake  ifopt_ipopt-targets-noconfig.cmake  ifopt_ipopt-targets.cmake
share/pkgconfig/: eigen3.pc
src/: classes_maximum_entropy.cc  find_initial_values.cc  ifopt_constraint_class.cc  ifopt_constraint_classes.cc  ifopt_cost_class.cc  ifopt_variable_class.cc  main.cc  maximum_entropy_relaxed.cc  metabolism.cc  read_data_files.cc  run_maximum_entropy.cc  test_maximum_entropy.cc  write_vector_to_csv.cc
(+144 files in other folders)
